--- a/demo.ipynb
+++ b/demo.ipynb
@@ -15,7 +15,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pip install ctscams\n",
+    "pip install ctscams\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "240489e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from ctscams import greedy_souping, ties\n",
     "from ctscams import finetune\n",
     "from ctscams import cluster_sampling, continous_time_series_clustering"
